[project]
name = "ndrlda"
version = "0.1.0"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["config*", "preprocessing*", "environment*", "models*", "training*", "evaluation*", "visualization*", "explainability*", "deployment*"]
